# comp308_Ass3

./: .gitignore  README.md
work/: CMakeLists.txt  README.txt
work/res/shaders/: phongShader.frag  phongShader.vert  shaderDemo.frag  shaderDemo.vert  toonShader.frag  toonShader.vert
work/src/: CMakeLists.txt  geometry.cpp  geometry.hpp  main.cpp
